test/end-to-end/runnable/overloading.crow
main void()
	zero rng 3 foo

zero nat64()
	0
zero int64()
	0

foo void(a nat64 my-range)
	info log "Called foo with {a.low} .. {a.high}"
foo void(a my-other-range)
	info log "This should not appear"

rng[t] t my-range(a t, b t) t compare
	a, b
rng my-other-range(a nat64, b string)
	a, b

my-range[t] record
	low t
	high t

my-other-range record
	low nat64
	high string
