test/end-to-end/compile-errors/expected-type-param.crow
main void()
	"x" foo
	"x" bar 0

foo[t] void(a t)
	a bar 0

bar[t] void(a t, b t)
	()
